# GameChessCore

./: .gitignore  Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Chessman.cpp  Chessman.h  Coord.cpp  Coord.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  Square.cpp  Square.h  main.cpp
include/chess_core/: Bishop.h  Chessman.h  Coord.h  Game.h  Pawn.h  Rook.h
src/: Knight.cpp  Queen.cpp  Square.cpp
src/include/chess_core/: Knight.h  Square.h
tests/: test_coord.h
